# EMAuth

./: .coverage  README.md  pyproject.toml
catalog/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
catalog/fixtures/: test_load_data.json
catalog/migrations/: 0001_initial.py
catalog/tests/: test_catalog.py
config/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
